--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -15,6 +15,14 @@ ul{
     }
 }
 
+.left-info{
+    ul{
+        li{
+            text-align: left;
+        }
+    }
+}
+
 table{
     table-layout: fixed;
 
